feat: add getUser method
